--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Blog :: 404</title>
 </head>
 <body>
+<div class="container">
+    <h1>Sorry, Post not found</h1>
+    <hr/>
+</div>
 
 </body>
 </html>
