--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,9 @@
     <div class="container">
         <h1>Spring boot blog application</h1>
         <hr />
+        <ul>
+            <li><a th:href="@{/posts/new}">New Post</a></li>
+        </ul>
         <div class="posts-container">
             <div class="post" th:each="post : ${posts}">
                 <h2><a th:href="@{'/posts/' + ${post.id}}"
@@ -26,6 +29,5 @@
             <li><a th:href="@{/login}">Login</a></li>
         </ul>
     </div>
-
 </body>
 </html>
