--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://wwww.thymeleaf.org">
+<html xmlns:th="http://wwww.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,15 +20,27 @@
                 </h2>
                 <h5 th:text="'Written by ' + ${post.account.firstName}">Account First Name</h5>
                 <h5 th:text=" 'Published on ' + ${post.createdAt}" >Created At</h5>
+                <h5 th:text=" 'Last updated on ' + ${post.updatedAt}" >Updated At</h5>
                 <p th:text="${post.body}">body text</p>
                 <br />
             </div>
         </div>
         <hr/>
-        <ul>
+        <ul sec:authorize="!isAuthenticated()">
             <li><a th:href="@{/register}">Register</a></li>
             <li><a th:href="@{/login}">Login</a></li>
         </ul>
+        <div sec:authorize="isAuthenticated()">
+            <form action="#"
+                    th:action="@{/logout}"
+                    method="POST">
+                <div>
+                    <label>Hi, <span sec:authentication="name">Username</span> </label>
+                </div>
+                <button type="submit">Logout</button>
+            </form>
+
+        </div>
     </div>
 </body>
 </html>
