--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html xmlns:th="http://wwww.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,11 +16,17 @@
             <div class="post">
                 <h2 class="text-center" th:text="${post.title}">Title</h2>
                 <h5 th:text="'Written by ' + ${post.account.firstName}">Account First Name</h5>
-                <h5 class="text-muted" th:text="'Created on ' + ${post.createdAt}">Created at</h5>
+                <h5  th:text="'Created on ' + ${post.createdAt}">Created at</h5>
+                <h5 th:text="'Last updated on ' + ${post.updatedAt}" >Updated At</h5>
                 <p th:text="${post.body}">body text</p>
             </div>
+            <ul sec:authorize="isAuthenticated()">
+                <li><a th:href="@{'/posts/' + ${post.id} + '/edit'}">Edit</a></li>
+                <li><a th:href="@{'/posts/' + ${post.id} + '/delete'}">Delete</a></li>
+            </ul>
         </div>
     </div>
 </div>
 </body>
+</html>
 </html>
